src/objects/Service_Management_Checkin__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Service Management Current Checkins</label>
    <fields>
        <fullName>Box_Size__c</fullName>
        <label>Bag/Box Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Time__c</fullName>
        <label>Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visitor__c</fullName>
        <label>Vistor</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points_Remaining__c</fullName>
        <label>Points Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>